# dabs-template

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  Justfile  README.md  mkdocs.yml  pyproject.toml
.bundles/: README.md
.dbt/: .gitignore  .user.yml  README.md  profiles.yml.sample
.dbt/workflows/: .user.yml  profiles.yml
.github/: pr_template.md
.github/actions/dab-command-aws/: action.yml
.github/actions/dab-deploy-azure/: action.yml
.github/actions/dbt-command/: action.yml
.github/actions/deploy-dab-aws/: action.yml
.github/actions/deploy-dab-azure/: action.yml
.github/actions/uv-setup/: action.yml
.github/workflows/: databricks-deploy-prd.yml  databricks-deploy-tst.yml  deploy-bundle-tst.yml  deploy-documentation-tst.yml  documentation-deploy-tst.yml  tester.yml  validate-code.yml  validate-convcom.yml  validate.yml  wip.yml
.targets/: dev.yml  prd.yml
_wip/: tester.py
bundles/: .gitignore  README.md
bundles/sample_bundle/: databricks.yml  variables.yml
bundles/sample_bundle/resources/: sample_job_dbt.job.yml  sample_job_notebooks.job.yml  sample_job_package.yml
bundles/sample_bundle/src/: sample_notebook.ipynb  sample_ntbk.ipynb
bundles/sample_bundle/targets/: dev.yml  prd.yml  tst.yml
dbt/: .gitignore
dbt/project_sample/: .sqlfluff  .sqlfluffignore  dbt_project.yml
dbt/project_sample/models/reports/tpch/: _reports.yml  minimum_cost_supplier.sql  national_market_share.sql  shipping_priority.sql
dbt/project_sample/models/reports/tpch/docs/: _reports.yml  minimum_cost_supplier.md  pricing_summary_report.md  q01_pricing_summary_report.sql  q02_minimum_cost_supplier.sql  q03_shipping_priority.sql  q08_national_market_share.sql
dbt/project_sample/models/staging/tpch/: _tpch__models.yml  _tpch__sources.yml  stg_tpch__customer.sql  stg_tpch__lineitem.sql  stg_tpch__nation.sql  stg_tpch__orders.sql  stg_tpch__part.sql  stg_tpch__partsupp.sql  stg_tpch__region.sql  stg_tpch__supplier.sql
dbt/project_sample/seeds/metadata/: nation_metadata.csv  return_flag_dictionary.csv
dbt/sample_project/: .user.yml  dbt_project.yml
dbt/sample_project/models/reports/tpch/: minimum_cost_supplier.sql  national_market_share.sql  pricing_summary_report.sql  shipping_priority.sql
dbt/sample_project/models/staging/tpch/: _tpch__models.yml  _tpch__sources.yml  stg_tpch__nation.sql  stg_tpch__orders.sql  stg_tpch__part.sql  stg_tpch__partsupp.sql  stg_tpch__region.sql  stg_tpch__supplier.sql
dbt/sample_project/seeds/: seeds.yml
dbt/sample_project/seeds/metadata/: order_status_metadata.csv  region_metadata.csv
dbt/sample_project/tests/generic/: generic.yml  greater_than_zero.sql  string_matches_format.sql
docs/scripts/: gen_ref_pages.py
scripts/: gen_ref_pages.py
tests/: README.md
tests/datagen/: test_configuration.py  test_smoke.py
tests/sample_package/: test_calculator.py
