[project]
name = "dabs-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["datagen"]

# ---------------------------------------------
# uv workspace configuration
# This makes all packages/* installable together
# ---------------------------------------------
[tool.uv.workspace]
members = [
  "packages/*",
]

# -------------------------------
# Specify source packages that are workspace-managed
# -------------------------------
[tool.uv.sources]
datagen = { workspace = true }

# ---------------------------------------------
# Dev-only dependencies shared across repo
# ---------------------------------------------
[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.2",
    "mkdocs-material>=9.7.1",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-section-index>=0.3.10",
    "pre-commit>=4.5.1",
]

# ---------------------------------------------
# pytest configuration
# ---------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

# ---------------------------------------------
# ruff configuration
# ---------------------------------------------
[tool.ruff]
line-length = 100

# ---------------------------------------------
# mypy configuration
# ---------------------------------------------
[tool.mypy]
mypy_path = [
    "packages/datagen/src"
]
explicit_package_bases = true
